remove computer code on roll call page fix menu z-index try to fix sortBallots highlighting

--- a/Site/Views/Before/RollCall.cshtml.less
+++ b/Site/Views/Before/RollCall.cshtml.less
@@ -5,6 +5,7 @@
 }
 
 header,
+.CompCode,
 footer {
     display: none;
 }
